kubernetes-manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: letskonnecthere-ingress
  namespace: two-tier
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS": 443}]'
    alb.ingress.kubernetes.io/target-type: ip
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - letskonnecthere.com
        - www.letskonnecthere.com
      secretName: letskonnecthere-tls
  rules:
    - host: letskonnecthere.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: codexa-frontend
                port:
                  number: 80
    - host: www.letskonnecthere.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: codexa-frontend
                port:
                  number: 80
